Fixed image alignment bug

--- a/CSS/master.css
+++ b/CSS/master.css
@@ -99,7 +99,7 @@ body > div {
 
 .elementImage img {
     position: absolute;
-    margin-left: 50%;
+    left: 50%;
     top: 50%;
 
     transform: translate(-50%, -50%);
@@ -270,10 +270,6 @@ body > div {
 
 .elementPopup {
     display: none;
-}
-
-.elementPopup * {
-    text-align: center;
 }
 
 .elementPopup > div:first-child {
